<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#878B8C"
    tools:context=".SegundaActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="126dp"
        android:layout_height="59dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/bem_vindo"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/user"
        android:layout_width="212dp"
        android:layout_height="58dp"
        android:layout_marginEnd="52dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/nome"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/info_app"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnConsultarAlertas"
        android:layout_width="153dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:text="@string/verAlertas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/fazerAlerta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/facaAlerta"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConsultarAlertas" />

    <Button
        android:id="@+id/btnProximo"
        android:layout_width="153dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:text="@string/prosseguir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fazerAlerta"
        app:layout_constraintVertical_bias="0.055"
        tools:ignore="TextSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>