<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#878B8C"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/logo"
        android:layout_width="204dp"
        android:layout_height="133dp"
        android:layout_marginTop="68dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,TextSizeCheck" />

    <EditText
        android:id="@+id/user"
        android:layout_width="299dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.119" />

    <EditText
        android:id="@+id/senha"
        android:layout_width="299dp"
        android:layout_height="60dp"
        android:layout_marginTop="52dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/user"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/user"
        app:layout_constraintTop_toBottomOf="@+id/user"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="194dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:text="@string/remember"
        app:layout_constraintEnd_toEndOf="@+id/senha"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/senha"
        app:layout_constraintTop_toBottomOf="@+id/senha"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="187dp"
        android:layout_height="69dp"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/senha"
        app:layout_constraintStart_toStartOf="@+id/senha"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintVertical_bias="0.132"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>